# Cradle

./: Cargo.toml  README.md
cradle/: Cargo.toml
cradle-cli/: Cargo.toml
cradle-cli/src/: ch.rs  itc.rs  itp.rs  itp_dds.rs  itp_png.rs  main.rs  png.rs  util.rs
cradle-dds/: Cargo.toml
cradle-dds/src/: dds.rs  enums.rs  lib.rs
cradle-dds/src/dds/: enums.rs
cradle-dxt/: Cargo.toml
cradle-dxt/src/: bc7.rs  lib.rs  s3tc.rs
cradle/examples/: everything.rs
cradle/src/: ch.rs  chcp.rs  itc.rs  itp.rs  lib.rs  permute.rs  raster.rs  util.rs
cradle/src/itp/: read.rs  write.rs
samples/: .gitignore  README.md
samples/ch/: c_vis020._ch  mt4301._ch
samples/chcp/: fc__ch00108._ch  fc__ch00108p._cp
samples/itc/: 3rd_psp__ch04465.itc  ao__ch00051.itc  ao_evo__ch40004.itc  sc_evo__ch00053.itc
samples/itp/: 3rd_evo__bara.itp  3rd_evo__bs13_08.itp  3rd_evo__ea.itp  3rd_evo__mokuji.itp  ao__extra020.itp  ao__t1490_535_t148wa06.itp  ao_gf__c_vis289.itp  ao_gf__citymap1.itp  ao_psp__c_load00.itp  ao_psp__c_load01.itp  ao_psp__cti03200.itp  ao_psp__eftx128.itp  ao_psp__m02_0002.itp  fc_evo__battle.itp  fc_evo__c_bbs02.itp  fc_evo__c_wipe00.itp  fc_evo__ea000000.itp  fc_evo__eftx001.itp  fc_evo__tx0307.itp  nayuta__cb000.itp  nayuta__ce065.itp  nayuta__cond.itp  nayuta__emotion.itp  nayuta__exterior.itp  nayuta__icon00.itp  nayuta__load01.itp  nayuta__m_record.itp  nayuta__ti_icon.itp  nayuta__title00.itp  sc_evo__C54tex00.itp  sc_evo__arm_f.itp  sc_evo__bs04_06.itp  sc_evo__bs09_19.itp  sc_evo__c14d1304.itp  sc_evo__disc_chg.itp  sc_evo__dokuro.itp  ys8__am_430x.itp  ys8__am_433x1.itp  ys8__bn_b020.itp  ys8__ef_2_00.itp  (+8 more)
