[package]
name = "cradle-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
cradle.path = "../cradle"
cradle-dds.path = "../cradle-dds"
cradle-dxt.path = "../cradle-dxt"

clap = { version = "4.2", features = ["derive"] }
camino = "1.1.6"

eyre = "0.6.8"
eyre-span = "0.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-error = "0.2.0"

png = "0.17.7"
strength_reduce = "0.2.4"

[dev-dependencies]
filetest = "0.1.1"
