[package]
name = "cradle"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.0"
num_enum = "0.7.0"
extend = "1.2.0"
gospel = "0.1.0"

falcompress.path = "../../Falcompress"

[library]
doctest = false

[dev-dependencies]
filetest = "0.1.1"
gospel = { version = "0.1.0", features = ["dump"] }
anyhow = "1.0"
memmap2 = "0.8"
